--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              
              <div class="col-lg-5 order-lg-2 order-1">
                <div class="ms-lg-auto text-center">
-                 <img src="/images/top-right-img-1.png" class="img-fluid">
+                 <img src="./images/top-right-img-1.png" class="img-fluid">
                </div>
 
              </div>
