--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="images/logo.png" class="img-fluid" alt="logo">
           </a>
           <ul class="m-0 list-unstyled">
-            <li><a href="#" class="main-btn">Download CV</a></li>
+            <li><a href="./images/PRATHAMESH SHINDE_RESUME (1).pdf" class="main-btn" download>Download CV</a></li>
           </ul>
         </div>
       </nav>
@@ -151,7 +151,7 @@
                     <p>Ambitious fresher graduate having knowledge of computer languages like HTML,CSS, JavaScript also learned Java &
                        Java Framework (Hibernate & Spring), 
                       Looking for opportunities where I can explore myself practically and Helps to Organization growth also..</p>
-                     <button class="btn main-btn my-4">Download CV</button>
+                     <button class="btn main-btn my-4"><a href="./images/PRATHAMESH SHINDE_RESUME (1).pdf" download>Download Cv</a></button>
                    </div>
                  </div>
               </div>
@@ -718,7 +718,7 @@
                         </span>
                         <div class="ps-4">
                          <h5 class="fw-bold text-white mb-0">Email Me</h5>
-                         <p class="m-0">shindeprathamesh9891gmail.com</p>
+                         <p class="m-0">shindeprathamesh9891<br>@gmail.com</p>
                         </div>
                       </li>
                       <li class="d-flex align-items-center mb-4">
