--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div class="mt-4 social-icon">
              
               <ul class="list-unstyled d-flex m-0">
-                <li class="me-2"><a href="#"><img src="./images/social-icon/facebook.svg"></a></li>
-                <li class="me-2"><a href="#"><img src="./images/social-icon/twitter-icon.svg"></a></li>
-                <li class="me-2"><a href="#"><img src="./images/social-icon/linkedin.svg"></a></li>
-                <li class="me-2"><a href="#"><img src="./images/social-icon/youtube.svg"></a></li>
+                <li class="me-2"><a href="https://www.facebook.com/sp.shinde.73?mibextid=ZbWKwL"><img src="./images/social-icon/facebook.svg"></a></li>
+                <li class="me-2"><a href="https://twitter.com/Pratham23571208"><img src="./images/social-icon/twitter-icon.svg"></a></li>
+                <li class="me-2"><a href="https://www.linkedin.com/in/prathamesh-shinde-a2b4711b6/"><img src="./images/social-icon/linkedin.svg"></a></li>
+                <li class="me-2"><a href="https://www.youtube.com"><img src="./images/social-icon/youtube.svg"></a></li>
               </ul>
             </div>
   
